# QGIS

.github/workflows/: build-docker.yml  code_layout.yml  flake8.yml  macos-build.yml  mingw64.yml  ogc.yml  run-tests.yml
images/: images.qrc
python/core/: core_auto.sip
python/core/auto_additions/: qgis.py
python/core/auto_generated/: qgis.sip.in  qgsapplication.sip.in  qgsmaplayer.sip.in  qgsprovidermetadata.sip.in
src/3d/: qgs3dmapscene.cpp  qgs3dmapscene.h
src/3d/mesh/: qgsmeshterraingenerator.cpp
src/3d/terrain/: qgsdemterraintilegeometry_p.cpp  qgsdemterraintileloader_p.cpp  qgsterraingenerator.cpp
src/analysis/: CMakeLists.txt
src/analysis/interpolation/: qgsdualedgetriangulation.cpp  qgsdualedgetriangulation.h  qgstininterpolator.cpp
src/analysis/mesh/: qgsmeshcalculator.cpp  qgsmeshcalculator.h  qgsmeshcalcutils.cpp  qgsmeshcalcutils.h  qgsmeshcontours.cpp  qgsmesheditingdelaunaytriangulation.cpp  qgsmeshontheflydatasetgroup.cpp  qgsmeshontheflydatasetgroup.h  qgsmeshtriangulation.cpp  qgsmeshtriangulation.h
src/app/: CMakeLists.txt  qgisapp.cpp  qgisapp.h  qgslayertreeviewtemporalindicator.cpp  qgsmaptoolsplitfeatures.cpp  qgsprojectproperties.cpp
src/app/3d/: qgs3dmapcanvas.h  qgsmesh3dsymbolwidget.cpp
src/app/maptools/: qgsappmaptools.cpp  qgsappmaptools.h
src/app/mesh/: qgsmaptooleditmesh.cpp  qgsmaptooleditmesh.h  qgsmaptooleditmeshframe.cpp  qgsmaptooleditmeshframe.h  qgsmeshcalculatordialog.cpp  qgsmeshcalculatordialog.h  qgsmeshdatasetgroupprovidedwidget.cpp  qgsmeshdatasetgroupprovidedwidget.h  qgsmeshdatasetgrouptreeview.cpp  qgsmeshdatasetgrouptreeview.h  qgsmeshlayerproperties.cpp  qgsmeshlayerproperties.h  qgsmeshrendereractivedatasetwidget.cpp  qgsmeshrendereractivedatasetwidget.h  qgsmeshrendererscalarsettingswidget.cpp  qgsmeshrendererscalarsettingswidget.h  qgsmeshrenderervectorsettingswidget.cpp  qgsmeshrenderervectorsettingswidget.h  qgsmeshstaticdatasetwidget.h  qgsmeshstrokewidthvaryingwidget.cpp  qgsmeshstrokewidthvaryingwidget.h  qgsrenderermeshpropertieswidget.cpp  qgsrenderermeshpropertieswidget.h
src/auth/: CMakeLists.txt
src/auth/hmacsha256/: CMakeLists.txt
src/auth/hmacsha256/core/: qgsauthhmacsha256method.cpp  qgsauthhmacsha256method.h
src/auth/hmacsha256/gui/: qgsauthhmacsha256edit.cpp  qgsauthhmacsha256edit.h  qgsauthhmacsha256edit.ui
src/core/: CMakeLists.txt  qgis.h  qgsapplication.cpp  qgsapplication.h  qgslayerdefinition.cpp  qgslayerdefinition.h  qgsmaplayer.cpp  qgsmaplayer.h  qgsmapsettings.h  qgsprovidermetadata.h  qgsrendercontext.cpp  qgsrendercontext.h  qgstiledownloadmanager.cpp  qgstransaction.cpp  qgstransaction.h  qgsvectorlayer.cpp  qgsvectorlayer.h  qgsvectorlayereditutils.cpp  qgsvectorlayereditutils.h
src/core/auth/: qgsauthmanager.cpp
src/core/geometry/: qgsgeometry.cpp  (+1 more)
src/gui/: qgsdatasourcemanagerdialog.cpp  qgsexpressionbuilderwidget.cpp  qgsgeometryrubberband.cpp  qgsgeometryrubberband.h  qgsmapcanvas.cpp  qgsmaptoolcapture.cpp  qgsmaptoolcapture.h  qgsmaptooledit.cpp  qgsmaptooledit.h
src/providers/mssql/odbcProxyDriver/: CMakeLists.txt  qgsodbcproxy.json  qgssqlodbcproxydriver.cpp  qgssqlodbcproxydriver.h
src/ui/: qgisapp.ui  qgsinterpolatedlinerendererwidgetbase.ui  qgsmssqlnewconnectionbase.ui  qgsprojectpropertiesbase.ui  qgsrasterlayerpropertiesbase.ui
(+123 files in other folders)
